--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -3,3 +3,4 @@
 <%= link_to 'Actors', actors_path %>
 <%= link_to 'Movies', movies_path %>
 <%= link_to 'Genres', genres_path %>
+<%= link_to 'Statistics', stats_path %>
