crud for awards

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -3,4 +3,5 @@
 <%= link_to 'Actors', actors_path %>
 <%= link_to 'Movies', movies_path %>
 <%= link_to 'Genres', genres_path %>
+<%= link_to 'Awards', awards_path %>
 <%= link_to 'Statistics', stats_path %>
