--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -3,6 +3,7 @@
   <li>Most Valuable Actor: <%= Actor.max_movies %></li>
   <li>Most Popular Genre: <%= Genre.most_popular %></li>
   <li>Film with highest revenue <%= Movie.max_revenue %></li>
+  <li>Greatest Movie: <%= Movie.greatest_movie %></li>
 </ul>
 
 <%= link_to 'Back', root_path %>
