--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -4,6 +4,8 @@
   <li>Most Popular Genre: <%= Genre.most_popular %></li>
   <li>Film with highest revenue <%= Movie.max_revenue %></li>
   <li>Greatest Movie: <%= Movie.greatest_movie %></li>
+  <li>Most first role awards: <%= Actor.most_first_roles %></li>
+  <li>Most second role awards: <%= Actor.most_second_roles %></li>  
 </ul>
 
 <%= link_to 'Back', root_path %>
