--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -6,6 +6,7 @@
   <li>Greatest Movie: <%= Movie.greatest_movie %></li>
   <li>Most first role awards: <%= Actor.most_first_roles %></li>
   <li>Most second role awards: <%= Actor.most_second_roles %></li>  
+  <li>The Greatest actor: <%= Actor.greatest_actor %></li>
 </ul>
 
 <%= link_to 'Back', root_path %>
